--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
     "pug": "^3.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.6",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.1.0",
-    "babel-preset-env": "^1.7.0",
-    "concurrently": "^5.3.0",
-    "css-loader": "^4.2.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "node-sass": "^4.14.1",
-    "nodemon": "^2.0.4",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^9.0.3",
-    "webpack": "^4.44.1"
+    "autoprefixer": "6.7.7",
+    "babel-core": "6.24.0",
+    "babel-loader": "6.4.0",
+    "babel-preset-env": "^1.6.0",
+    "concurrently": "3.4.0",
+    "css-loader": "0.28.11",
+    "extract-text-webpack-plugin": "2.1.0",
+    "node-sass": "^4.7.2",
+    "nodemon": "^1.18.3",
+    "now": "^6.4.1",
+    "postcss-loader": "1.3.3",
+    "sass-loader": "6.0.3",
+    "webpack": "2.2.1"
   }
 }
