--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsdom": "^16.4.0",
+    "moment": "^2.27.0",
     "mongoose": "^5.10.0",
     "pug": "^3.0.0"
   },
