--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "concat-stream": "^2.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jimp": "^0.16.1",
     "jsdom": "^16.4.0",
     "moment": "^2.27.0",
     "mongoose": "^5.10.0",
