--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "concat-stream": "^2.0.0",
+    "del": "^6.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jimp": "^0.16.1",
